[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version="0.7.2", features = ["cookie-session"]}
actix-web = "4"
async-process = "1.5.0"
config = "0.13.2"
deadpool-postgres = { version="0.10.3", features = ["serde"]}
dotenv = "0.15.0"
rand = "0.8.5"
regex = "1.7.0"
serde = "1.0.147"
serde_json = "1.0.89"
simple-error = "0.2.3"
walkdir = "2.3.2"
